force-app/main/default/objects/ssot__BenefitApplication__dlm/fields/ssot__BenefitAssignmentId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BenefitAssignmentId__c</fullName>
    <label>Benefit Assignment</label>
    <length>36</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BenefitAssignmentId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>