force-app/main/default/objects/ssot__BenefitApplication__dlm/fields/ssot__rel_1719818622008_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719818622008_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BenefitApplication_ApplicationId_map_rel</label>
    <referenceTo>ssot__Application__dlm</referenceTo>
    <relationshipLabel>BenefitApplication_ApplicationId_map_rel</relationshipLabel>
    <relationshipName>rel_1719818622008_end</relationshipName>
    <type>Lookup</type>
</CustomField>