force-app/main/default/objects/ssot__BenefitApplication__dlm/fields/ssot__rel_1719819475536_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1719819475536_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BenefitApplication_BenefitAssignment_rel</label>
    <referenceTo>ssot__BenefitAssignment__dlm</referenceTo>
    <relationshipLabel>BenefitApplication_BenefitAssignment_rel</relationshipLabel>
    <relationshipName>rel_1719819475536_end</relationshipName>
    <type>Lookup</type>
</CustomField>